Potential Memory overflow fix
Changed the music bar::before to update onTimeUpdate, onLoadedData, and onEnded. Will stress test later

--- a/src/components/music bar/musicbar.css
+++ b/src/components/music bar/musicbar.css
@@ -1004,3 +1004,19 @@
     }
 
 }
+
+.progress-bar {
+    width: 100%;
+    height: 4px;
+    background-color: #eee;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+
+  .progress {
+    height: 100%;
+    background-color: #0077ff;
+    border-radius: 4px;
+    width: 0%;
+    transition: width 0.1s linear;
+  }
